feat(genre): implement Elasticsearch gateway for genre persistence